{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 22,
  "lineage": "ee7e54a2-74bc-f922-62da-2a3148e0dbff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Terraform_Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:637423648106:instance/i-0b62ee7d9c63ce9c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b62ee7d9c63ce9c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Server-A-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084a0bccfeafd4777",
            "private_dns": "ip-10-0-1-108.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-3-80-164-41.compute-1.amazonaws.com",
            "public_ip": "3.80.164.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0769e0176b4fe7af2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0925e7d48703c6dd2",
            "tags": {
              "Name": "Terraform_Server"
            },
            "tags_all": {
              "Name": "Terraform_Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6a01ace5c2a1027"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_http",
            "aws_subnet.TFsubnet_1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terraform_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:internet-gateway/igw-0bd7a0bcf740af38f",
            "id": "igw-0bd7a0bcf740af38f",
            "owner_id": "637423648106",
            "tags": {
              "Name": "Terraform_igw"
            },
            "tags_all": {
              "Name": "Terraform_igw"
            },
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bd7a0bcf740af38f",
            "id": "r-rtb-04b1fda38691921391080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b1fda3869192139",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terraform_igw",
            "aws_route_table.Terraform_RT",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Terraform_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:route-table/rtb-04b1fda3869192139",
            "id": "rtb-04b1fda3869192139",
            "owner_id": "637423648106",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd7a0bcf740af38f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_RT"
            },
            "tags_all": {
              "Name": "Terraform_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1ccd482d3d1bfe5",
            "route_table_id": "rtb-04b1fda3869192139",
            "subnet_id": "subnet-0925e7d48703c6dd2"
          },
          "dependencies": [
            "aws_route_table.Terraform_RT",
            "aws_subnet.TFsubnet_1",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd8f2397f2b5a9e0",
            "route_table_id": "rtb-04b1fda3869192139",
            "subnet_id": "subnet-0ec9a57e5718f563a"
          },
          "dependencies": [
            "aws_route_table.Terraform_RT",
            "aws_subnet.TFsubnet_2",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_3_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5e5efda52acde58",
            "route_table_id": "rtb-04b1fda3869192139",
            "subnet_id": "subnet-05a7646bd76034e01"
          },
          "dependencies": [
            "aws_route_table.Terraform_RT",
            "aws_subnet.TFsubnet_3",
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:security-group/sg-0a6a01ace5c2a1027",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6a01ace5c2a1027",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240912145738464600000001",
            "name_prefix": "terraform-",
            "owner_id": "637423648106",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFsubnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:subnet/subnet-0925e7d48703c6dd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0925e7d48703c6dd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423648106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFsubnet_1"
            },
            "tags_all": {
              "Name": "TFsubnet_1"
            },
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFsubnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:subnet/subnet-0ec9a57e5718f563a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec9a57e5718f563a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423648106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFsubnet_2"
            },
            "tags_all": {
              "Name": "TFsubnet_2"
            },
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TFsubnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:subnet/subnet-05a7646bd76034e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a7646bd76034e01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423648106",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TFsubnet_3"
            },
            "tags_all": {
              "Name": "TFsubnet_3"
            },
            "vpc_id": "vpc-0bef7c65c1523a72a"
          },
          "dependencies": [
            "aws_vpc.Terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423648106:vpc/vpc-0bef7c65c1523a72a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c12acaf13402429",
            "default_route_table_id": "rtb-0e1e3798e65ac4132",
            "default_security_group_id": "sg-0f1f86db9f1960add",
            "dhcp_options_id": "dopt-06006e9b1d8a45334",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bef7c65c1523a72a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1e3798e65ac4132",
            "owner_id": "637423648106",
            "tags": {
              "Name": "Terraform_vpc"
            },
            "tags_all": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}